add get posts with images method